--- a/Contents/index.css
+++ b/Contents/index.css
@@ -186,6 +186,7 @@ button.dark:disabled {
   grid-row: 2;
   margin-bottom: auto;
   margin-top: auto;
+  font-size: 2rem;
 }
 
 .project > ul {
@@ -203,7 +204,7 @@ button.dark:disabled {
   color: black;
   padding: 6px;
   float: left;
-  margin-right: 5px;
+  margin-right: 13px;
 }
 
 .project > ul > li a {
@@ -259,6 +260,7 @@ button.light:disabled {
 #footer a {
   color: #98dede;
   text-decoration: none;
+  margin-right: 35%;
 }
 
 #footer > ul {
